[package]
name = "marci-db"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
canopydb = "0.2.4"
chrono = "0.4.42"
http-body-util = "0.1.3"
hyper = "1.7.0"
hyper-util = { version = "0.1.17", features = ["http1", "server", "tokio"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
